chore: jbct format pass + SEAL-01 explicit permits on v6 sealed interfaces